added code to dogs cats ensemble, renamed it, commented code out of mkdir for dogs_cats

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 .idea/workspace.xml
 .idea/tasks.xml
 data/
+.ipynb_checkpoints/
+redone/.ipynb_checkpoints/
 
 # Sensitive or high-churn files:
 .idea/dataSources/
